melhorias de acessibilidade

--- a/about.html
+++ b/about.html
@@ -33,8 +33,12 @@
               </li>
             </ul>
           </nav>
-          <button class="menu-button" onclick="openMenu()">
-            <img src="./assets/icons/menu-light.svg" />
+          <button
+            class="menu-button"
+            onclick="openMenu()"
+            aria-label="Mobile menu button"
+          >
+            <img alt="Mobile menu icon" src="./assets/icons/menu-light.svg" />
           </button>
         </div>
         <div class="header-about-me-container">
@@ -178,7 +182,11 @@
     <section>
       <div class="container">
         <h2 class="section-title">
-          <img src="./assets/icons/title-icon.svg" /> <span>Contact Me</span>
+          <img
+            alt="Icon of a eight pointed star"
+            src="./assets/icons/title-icon.svg"
+          />
+          <span>Contact Me</span>
         </h2>
         <div class="section-content">
           <div class="responsive-grid-50-50">
@@ -205,7 +213,11 @@
                     href="https://www.behance.net/Gbtonini"
                     target="_blank"
                   >
-                    Behance <img src="./assets/icons/link-arrow.png" />
+                    Behance
+                    <img
+                      alt="Arrow icon pointing to upper left corner"
+                      src="./assets/icons/link-arrow.png"
+                    />
                   </a>
                 </li>
                 <li>
@@ -214,7 +226,11 @@
                     href="https://www.instagram.com/gbtonini/"
                     target="_blank"
                   >
-                    Instagram <img src="./assets/icons/link-arrow.png" />
+                    Instagram
+                    <img
+                      alt="Arrow icon pointing to upper left corner"
+                      src="./assets/icons/link-arrow.png"
+                    />
                   </a>
                 </li>
                 <li>
@@ -223,7 +239,11 @@
                     href="https://www.linkedin.com/in/gbtonini/"
                     target="_blank"
                   >
-                    LinkedIn <img src="./assets/icons/link-arrow.png" />
+                    LinkedIn
+                    <img
+                      alt="Arrow icon pointing to upper left corner"
+                      src="./assets/icons/link-arrow.png"
+                    />
                   </a>
                 </li>
               </ul>
