--- a/contact-me.html
+++ b/contact-me.html
@@ -33,8 +33,12 @@
               </li>
             </ul>
           </nav>
-          <button class="menu-button" onclick="openMenu()">
-            <img src="./assets/icons/menu.svg" />
+          <button
+            class="menu-button"
+            onclick="openMenu()"
+            aria-label="Mobile menu button"
+          >
+            <img alt="Mobile menu icon" src="./assets/icons/menu.svg" />
           </button>
         </div>
       </div>
@@ -64,7 +68,11 @@
     <section class="pt-2 mb-2">
       <div class="container">
         <h2 class="section-title">
-          <img src="./assets/icons/title-icon.svg" /> <span>Contact</span>
+          <img
+            alt="Icon of a eight pointed star"
+            src="./assets/icons/title-icon.svg"
+          />
+          <span>Contact</span>
         </h2>
         <div class="responsive-grid-50-50 mt-1 mb-2">
           <div>
@@ -117,7 +125,11 @@
     <section>
       <div class="container">
         <h2 class="section-title">
-          <img src="./assets/icons/title-icon.svg" /> <span>Contact Me</span>
+          <img
+            alt="Icon of a eight pointed star"
+            src="./assets/icons/title-icon.svg"
+          />
+          <span>Contact Me</span>
         </h2>
         <div class="section-content">
           <div class="responsive-grid-50-50">
@@ -144,7 +156,11 @@
                     href="https://www.behance.net/Gbtonini"
                     target="_blank"
                   >
-                    Behance <img src="./assets/icons/link-arrow.png" />
+                    Behance
+                    <img
+                      alt="Arrow icon pointing to upper left corner"
+                      src="./assets/icons/link-arrow.png"
+                    />
                   </a>
                 </li>
                 <li>
@@ -153,7 +169,11 @@
                     href="https://www.instagram.com/gbtonini/"
                     target="_blank"
                   >
-                    Instagram <img src="./assets/icons/link-arrow.png" />
+                    Instagram
+                    <img
+                      alt="Arrow icon pointing to upper left corner"
+                      src="./assets/icons/link-arrow.png"
+                    />
                   </a>
                 </li>
                 <li>
@@ -162,7 +182,11 @@
                     href="https://www.linkedin.com/in/gbtonini/"
                     target="_blank"
                   >
-                    LinkedIn <img src="./assets/icons/link-arrow.png" />
+                    LinkedIn
+                    <img
+                      alt="Arrow icon pointing to upper left corner"
+                      src="./assets/icons/link-arrow.png"
+                    />
                   </a>
                 </li>
               </ul>
