--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
               </li>
             </ul>
           </nav>
-          <button class="menu-button" onclick="openMenu()">
-            <img src="./assets/icons/menu-light.svg" />
+          <button
+            class="menu-button"
+            onclick="openMenu()"
+            aria-label="Mobile menu button"
+          >
+            <img alt="Mobile menu icon" src="./assets/icons/menu-light.svg" />
           </button>
         </div>
         <div class="header-content">
@@ -89,7 +93,11 @@
     <section id="initial-section" class="mb-2 pt-2">
       <div class="container">
         <h2 class="section-title">
-          <img src="./assets/icons/title-icon.svg" /> <span>Work</span>
+          <img
+            alt="Icon of a eight pointed star"
+            src="./assets/icons/title-icon.svg"
+          />
+          <span>Work</span>
         </h2>
         <div class="section-content">
           <p class="section-description">
@@ -112,7 +120,10 @@
             <a href="work.html">
               Restaura <br />
               Jeans
-              <img src="./assets/icons/link-arrow.png" />
+              <img
+                alt="Arrow icon pointing to upper left corner"
+                src="./assets/icons/link-arrow.png"
+              />
             </a>
           </h2>
           <p class="page-sub-description mb-2">
@@ -128,17 +139,31 @@
       <div class="container mt-2">
         <div class="responsive-grid-50-50">
           <div class="work-card">
-            <img src="./assets/images/dental-speed.png" />
-            <a class="default-link" href="work.html"
-              >Dental Speed <img src="./assets/icons/link-arrow.png"
-            /></a>
+            <img
+              alt="Banner showing design work done for dental speed"
+              src="./assets/images/dental-speed.png"
+            />
+            <a class="default-link" href="work.html">
+              Dental Speed
+              <img
+                alt="Arrow icon pointing to upper left corner"
+                src="./assets/icons/link-arrow.png"
+              />
+            </a>
           </div>
 
           <div class="work-card">
-            <img src="./assets/images/espaco-jasmin.png" />
-            <a class="default-link" href="work.html"
-              >Espaço Jasmin <img src="./assets/icons/link-arrow.png"
-            /></a>
+            <img
+              alt="Banner showing design work done for Espaço Jasmin"
+              src="./assets/images/espaco-jasmin.png"
+            />
+            <a class="default-link" href="work.html">
+              Espaço Jasmin
+              <img
+                alt="Arrow icon pointing to upper left corner"
+                src="./assets/icons/link-arrow.png"
+              />
+            </a>
           </div>
         </div>
       </div>
@@ -147,7 +172,10 @@
     <section class="mb-2 background-banner">
       <div class="container pt-2 pb-2">
         <h2 class="section-title color-white">
-          <img src="./assets/icons/title-icon-white.svg" />
+          <img
+            alt="Icon of a eight pointed star"
+            src="./assets/icons/title-icon-white.svg"
+          />
           <span>Services</span>
         </h2>
 
@@ -161,6 +189,7 @@
           <div class="services-section-redirect-arrow-container">
             <a target="_blank" href="https://www.behance.net/Gbtonini">
               <img
+                alt="Arrow icon pointing to upper left corner"
                 class="services-section-redirect-arrow"
                 src="./assets/icons/link-arrow-white.png"
               />
@@ -173,7 +202,11 @@
     <section>
       <div class="container">
         <h2 class="section-title">
-          <img src="./assets/icons/title-icon.svg" /> <span>About Me</span>
+          <img
+            alt="Icon of a eight pointed star"
+            src="./assets/icons/title-icon.svg"
+          />
+          <span>About Me</span>
         </h2>
         <div class="section-content">
           <p class="section-description">
@@ -182,7 +215,11 @@
           </p>
           <div class="responsive-grid-50-50 mt-2">
             <div>
-              <img class="w-100" src="./assets/images/about-me-banner.png" />
+              <img
+                alt="Image showing different app screenshots"
+                class="w-100"
+                src="./assets/images/about-me-banner.png"
+              />
             </div>
             <div class="vertical-align">
               <p class="section-description">
@@ -199,7 +236,11 @@
     <section>
       <div class="container">
         <h2 class="section-title">
-          <img src="./assets/icons/title-icon.svg" /> <span>Contact Me</span>
+          <img
+            alt="Icon of a eight pointed star"
+            src="./assets/icons/title-icon.svg"
+          />
+          <span>Contact Me</span>
         </h2>
         <div class="section-content">
           <div class="responsive-grid-50-50">
@@ -226,7 +267,11 @@
                     href="https://www.behance.net/Gbtonini"
                     target="_blank"
                   >
-                    Behance <img src="./assets/icons/link-arrow.png" />
+                    Behance
+                    <img
+                      alt="Arrow icon pointing to upper left corner"
+                      src="./assets/icons/link-arrow.png"
+                    />
                   </a>
                 </li>
                 <li>
@@ -235,7 +280,11 @@
                     href="https://www.instagram.com/gbtonini/"
                     target="_blank"
                   >
-                    Instagram <img src="./assets/icons/link-arrow.png" />
+                    Instagram
+                    <img
+                      alt="Arrow icon pointing to upper left corner"
+                      src="./assets/icons/link-arrow.png"
+                    />
                   </a>
                 </li>
                 <li>
@@ -244,7 +293,11 @@
                     href="https://www.linkedin.com/in/gbtonini/"
                     target="_blank"
                   >
-                    LinkedIn <img src="./assets/icons/link-arrow.png" />
+                    LinkedIn
+                    <img
+                      alt="Arrow icon pointing to upper left corner"
+                      src="./assets/icons/link-arrow.png"
+                    />
                   </a>
                 </li>
               </ul>
