--- a/work.html
+++ b/work.html
@@ -33,8 +33,12 @@
               </li>
             </ul>
           </nav>
-          <button class="menu-button" onclick="openMenu()">
-            <img src="./assets/icons/menu.svg" />
+          <button
+            class="menu-button"
+            onclick="openMenu()"
+            aria-label="Mobile menu button"
+          >
+            <img alt="Mobile menu icon" src="./assets/icons/menu.svg" />
           </button>
         </div>
       </div>
@@ -64,7 +68,11 @@
     <section id="initial-section" class="mb-2 pt-2">
       <div class="container">
         <h2 class="section-title">
-          <img src="./assets/icons/title-icon.svg" /> <span>Work</span>
+          <img
+            alt="Icon of a eight pointed star"
+            src="./assets/icons/title-icon.svg"
+          />
+          <span>Work</span>
         </h2>
         <div class="section-content">
           <p class="section-description">Bringing Ideas to Life:</p>
@@ -84,7 +92,11 @@
 
           <div class="work-grid-title">
             <a class="default-link" href="">
-              DiGinie <img src="./assets/icons/link-arrow.png" />
+              DiGinie
+              <img
+                alt="Arrow icon pointing to upper left corner"
+                src="./assets/icons/link-arrow.png"
+              />
             </a>
           </div>
         </div>
@@ -95,12 +107,20 @@
           </div>
 
           <div class="work-grid-banner">
-            <img class="w-100" src="assets/images/dental-speed.png" />
+            <img
+              alt="Banner showing design work done for dental speed"
+              class="w-100"
+              src="assets/images/dental-speed.png"
+            />
           </div>
 
           <div class="work-grid-title">
             <a class="default-link" href="">
-              Dental Speed <img src="./assets/icons/link-arrow.png" />
+              Dental Speed
+              <img
+                alt="Arrow icon pointing to upper left corner"
+                src="./assets/icons/link-arrow.png"
+              />
             </a>
           </div>
         </div>
@@ -111,12 +131,20 @@
           </div>
 
           <div class="work-grid-banner">
-            <img class="w-100" src="assets/images/espaco-jasmin.png" />
+            <img
+              alt="Banner showing design work done for Espaço Jasmin"
+              class="w-100"
+              src="assets/images/espaco-jasmin.png"
+            />
           </div>
 
           <div class="work-grid-title">
             <a class="default-link" href="">
-              Espaço Jasmin <img src="./assets/icons/link-arrow.png" />
+              Espaço Jasmin
+              <img
+                alt="Arrow icon pointing to upper left corner"
+                src="./assets/icons/link-arrow.png"
+              />
             </a>
           </div>
         </div>
@@ -132,7 +160,11 @@
 
           <div class="work-grid-title">
             <a class="default-link" href="">
-              Liberta <img src="./assets/icons/link-arrow.png" />
+              Liberta
+              <img
+                alt="Arrow icon pointing to upper left corner"
+                src="./assets/icons/link-arrow.png"
+              />
             </a>
           </div>
         </div>
@@ -142,7 +174,11 @@
     <section>
       <div class="container">
         <h2 class="section-title">
-          <img src="./assets/icons/title-icon.svg" /> <span>Contact Me</span>
+          <img
+            alt="Icon of a eight pointed star"
+            src="./assets/icons/title-icon.svg"
+          />
+          <span>Contact Me</span>
         </h2>
         <div class="section-content">
           <div class="responsive-grid-50-50">
@@ -169,7 +205,11 @@
                     href="https://www.behance.net/Gbtonini"
                     target="_blank"
                   >
-                    Behance <img src="./assets/icons/link-arrow.png" />
+                    Behance
+                    <img
+                      alt="Arrow icon pointing to upper left corner"
+                      src="./assets/icons/link-arrow.png"
+                    />
                   </a>
                 </li>
                 <li>
@@ -178,7 +218,11 @@
                     href="https://www.instagram.com/gbtonini/"
                     target="_blank"
                   >
-                    Instagram <img src="./assets/icons/link-arrow.png" />
+                    Instagram
+                    <img
+                      alt="Arrow icon pointing to upper left corner"
+                      src="./assets/icons/link-arrow.png"
+                    />
                   </a>
                 </li>
                 <li>
@@ -187,7 +231,11 @@
                     href="https://www.linkedin.com/in/gbtonini/"
                     target="_blank"
                   >
-                    LinkedIn <img src="./assets/icons/link-arrow.png" />
+                    LinkedIn
+                    <img
+                      alt="Arrow icon pointing to upper left corner"
+                      src="./assets/icons/link-arrow.png"
+                    />
                   </a>
                 </li>
               </ul>
