melhorias de acessibilidade

--- a/about.html
+++ b/about.html
@@ -70,8 +70,8 @@
 
     <div id="mobile-menu" class="container">
       <div class="mobile-menu-header">
-        <button onclick="closeMenu()">
-          <img src="assets/icons/close.svg" />
+        <button onclick="closeMenu()" aria-label="Mobile menu closing button">
+          <img alt="Close icon" src="assets/icons/close.svg" />
         </button>
       </div>
       <nav>
