correção do campo de descrição

--- a/contact-me.html
+++ b/contact-me.html
@@ -116,8 +116,7 @@
                   id="input-message"
                   rows="6"
                   placeholder="Enter your message"
-                >
-                </textarea>
+                ></textarea>
               </div>
               <span class="error-message"></span>
             </div>
