--- a/works/di-ginie.html
+++ b/works/di-ginie.html
@@ -20,7 +20,7 @@
     <header>
       <div class="container">
         <div class="header-container">
-          <div class="logo"><a href="./index.html">Gab Tonini</a></div>
+          <div class="logo"><a href="/index.html">Gab Tonini</a></div>
           <nav>
             <ul>
               <li>
@@ -75,80 +75,6 @@
           />
           <span>Work</span>
         </h2>
-        <div class="section-content">
-          <p class="section-description">Bringing Ideas to Life:</p>
-          <p class="page-sub-description mt-1">
-            A selection of <span class="text-highlight">Recent Work</span>
-          </p>
-        </div>
-
-        <div class="work-grid">
-          <div class="work-grid-tags">
-            <span class="tag">UX/UI Design</span>
-          </div>
-
-          <div class="work-grid-banner">
-            <img class="w-100" src="assets/images/di-ginie.png" />
-          </div>
-
-          <div class="work-grid-title">
-            <a class="default-link" href="./works/di-ginie.html">
-              DiGinie
-              <img
-                alt="Arrow icon pointing to upper left corner"
-                src="./assets/icons/link-arrow.png"
-              />
-            </a>
-          </div>
-        </div>
-
-        <div class="work-grid">
-          <div class="work-grid-tags">
-            <span class="tag">Social Media</span>
-          </div>
-
-          <div class="work-grid-banner">
-            <img
-              alt="Banner showing design work done for dental speed"
-              class="w-100"
-              src="assets/images/dental-speed.png"
-            />
-          </div>
-
-          <div class="work-grid-title">
-            <a class="default-link" href="">
-              Dental Speed
-              <img
-                alt="Arrow icon pointing to upper left corner"
-                src="./assets/icons/link-arrow.png"
-              />
-            </a>
-          </div>
-        </div>
-
-        <div class="work-grid">
-          <div class="work-grid-tags">
-            <span class="tag">Logo & Branding</span>
-          </div>
-
-          <div class="work-grid-banner">
-            <img
-              alt="Banner showing design work done for Espaço Jasmin"
-              class="w-100"
-              src="assets/images/espaco-jasmin.png"
-            />
-          </div>
-
-          <div class="work-grid-title">
-            <a class="default-link" href="">
-              Espaço Jasmin
-              <img
-                alt="Arrow icon pointing to upper left corner"
-                src="./assets/icons/link-arrow.png"
-              />
-            </a>
-          </div>
-        </div>
       </div>
     </section>
 
