correçao importação a partir da raiz

--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
+
 <!DOCTYPE html>
 <html lang="pt">
-  <head>
-    <title>Gab Tonini | HOME</title>
-
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-  rel="stylesheet"
-/>
-<link rel="stylesheet" href="/styles/index.css" />
-<script type="text/javascript" src="/scripts/scripts.js"></script>
-  </head>
+<head>
+  <title>Gab Tonini | HOME</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="./styles/index.css" />
+  <script
+    type="text/javascript"
+    src="./scripts/scripts.js"
+  ></script>
+</head>
 
   <body>
     <header class="background-banner">
@@ -73,7 +76,7 @@
 <div id="mobile-menu" class="container">
   <div class="mobile-menu-header">
     <button onclick="closeMenu()" aria-label="Mobile menu closing button">
-      <img alt="Close icon" src="assets/icons/close.svg" />
+      <img alt="Close icon" src="./assets/icons/close.svg" />
     </button>
   </div>
   <nav>
@@ -239,7 +242,7 @@
     <h2 class="section-title">
       <img
         alt="Icon of a eight pointed star"
-        src="./assets/icons/title-icon.svg"
+        src=".//assets/icons/title-icon.svg"
       />
       <span>Contact Me</span>
     </h2>
