--- a/works/di-ginie.html
+++ b/works/di-ginie.html
@@ -1,36 +1,39 @@
+
 <!DOCTYPE html>
 <html lang="pt">
-  <head>
-    <title>Gab Tonini | WORK</title>
-
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-  rel="stylesheet"
-/>
-<link rel="stylesheet" href="/styles/index.css" />
-<script type="text/javascript" src="/scripts/scripts.js"></script>
-  </head>
+<head>
+  <title>Gab Tonini | WORK | DiGinie</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="../styles/index.css" />
+  <script
+    type="text/javascript"
+    src="../scripts/scripts.js"
+  ></script>
+</head>
 
   <body>
     <header>
       <div class="container">
         <div class="header-container">
-          <div class="logo"><a href="/index.html">Gab Tonini</a></div>
+          <div class="logo"><a href="../index.html">Gab Tonini</a></div>
           <nav>
             <ul>
               <li>
-                <a href="./work.html" class="active-page">Work</a>
+                <a href="../work.html" class="active-page">Work</a>
               </li>
               <li>
-                <a href="./about.html">About</a>
+                <a href="../about.html">About</a>
               </li>
               <li>
-                <a href="./contact-me.html">Contact</a>
+                <a href="../contact-me.html">Contact</a>
               </li>
             </ul>
           </nav>
@@ -39,7 +42,7 @@
             onclick="openMenu()"
             aria-label="Mobile menu button"
           >
-            <img alt="Mobile menu icon" src="./assets/icons/menu.svg" />
+            <img alt="Mobile menu icon" src="../assets/icons/menu.svg" />
           </button>
         </div>
       </div>
@@ -48,19 +51,19 @@
 <div id="mobile-menu" class="container">
   <div class="mobile-menu-header">
     <button onclick="closeMenu()" aria-label="Mobile menu closing button">
-      <img alt="Close icon" src="assets/icons/close.svg" />
+      <img alt="Close icon" src="../assets/icons/close.svg" />
     </button>
   </div>
   <nav>
     <ul>
       <li>
-        <a href="./work.html">Work</a>
+        <a href="../work.html">Work</a>
       </li>
       <li>
-        <a href="./about.html">About</a>
+        <a href="../about.html">About</a>
       </li>
       <li>
-        <a href="./contact-me.html">Contact</a>
+        <a href="../contact-me.html">Contact</a>
       </li>
     </ul>
   </nav>
@@ -71,7 +74,7 @@
         <h2 class="section-title">
           <img
             alt="Icon of a eight pointed star"
-            src="./assets/icons/title-icon.svg"
+            src="../assets/icons/title-icon.svg"
           />
           <span>Work</span>
         </h2>
@@ -83,7 +86,7 @@
     <h2 class="section-title">
       <img
         alt="Icon of a eight pointed star"
-        src="./assets/icons/title-icon.svg"
+        src="..//assets/icons/title-icon.svg"
       />
       <span>Contact Me</span>
     </h2>
@@ -115,7 +118,7 @@
                 Behance
                 <img
                   alt="Arrow icon pointing to upper left corner"
-                  src="./assets/icons/link-arrow.png"
+                  src="../assets/icons/link-arrow.png"
                 />
               </a>
             </li>
@@ -128,7 +131,7 @@
                 Instagram
                 <img
                   alt="Arrow icon pointing to upper left corner"
-                  src="./assets/icons/link-arrow.png"
+                  src="../assets/icons/link-arrow.png"
                 />
               </a>
             </li>
@@ -141,7 +144,7 @@
                 LinkedIn
                 <img
                   alt="Arrow icon pointing to upper left corner"
-                  src="./assets/icons/link-arrow.png"
+                  src="../assets/icons/link-arrow.png"
                 />
               </a>
             </li>
