página de detalhes para dental speed

--- a/works/dental-speed.html
+++ b/works/dental-speed.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <title>Gab Tonini | WORK</title>
+  <title>Gab Tonini | WORK | Dental Speed</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,10 +12,10 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet"
   />
-  <link rel="stylesheet" href="./styles/index.css" />
+  <link rel="stylesheet" href="../styles/index.css" />
   <script
     type="text/javascript"
-    src="./scripts/scripts.js"
+    src="../scripts/scripts.js"
   ></script>
 </head>
 
@@ -23,17 +23,17 @@
     <header>
       <div class="container">
         <div class="header-container">
-          <div class="logo"><a href="./index.html">Gab Tonini</a></div>
+          <div class="logo"><a href="../index.html">Gab Tonini</a></div>
           <nav>
             <ul>
               <li>
-                <a href="./work.html" class="active-page">Work</a>
+                <a href="../work.html" class="active-page">Work</a>
               </li>
               <li>
-                <a href="./about.html">About</a>
+                <a href="../about.html">About</a>
               </li>
               <li>
-                <a href="./contact-me.html">Contact</a>
+                <a href="../contact-me.html">Contact</a>
               </li>
             </ul>
           </nav>
@@ -42,7 +42,7 @@
             onclick="openMenu()"
             aria-label="Mobile menu button"
           >
-            <img alt="Mobile menu icon" src="./assets/icons/menu.svg" />
+            <img alt="Mobile menu icon" src="../assets/icons/menu.svg" />
           </button>
         </div>
       </div>
@@ -51,19 +51,19 @@
 <div id="mobile-menu" class="container">
   <div class="mobile-menu-header">
     <button onclick="closeMenu()" aria-label="Mobile menu closing button">
-      <img alt="Close icon" src="./assets/icons/close.svg" />
+      <img alt="Close icon" src="../assets/icons/close.svg" />
     </button>
   </div>
   <nav>
     <ul>
       <li>
-        <a href="./work.html">Work</a>
+        <a href="../work.html">Work</a>
       </li>
       <li>
-        <a href="./about.html">About</a>
+        <a href="../about.html">About</a>
       </li>
       <li>
-        <a href="./contact-me.html">Contact</a>
+        <a href="../contact-me.html">Contact</a>
       </li>
     </ul>
   </nav>
@@ -74,82 +74,52 @@
         <h2 class="section-title">
           <img
             alt="Icon of a eight pointed star"
-            src="./assets/icons/title-icon.svg"
+            src="../assets/icons/title-icon.svg"
           />
           <span>Work</span>
         </h2>
         <div class="section-content">
-          <p class="section-description">Bringing Ideas to Life:</p>
-          <p class="page-sub-description mt-1">
-            A selection of <span class="text-highlight">Recent Work</span>
-          </p>
-        </div>
-
-        <div class="work-grid">
-          <div class="work-grid-tags">
-            <span class="tag">UX/UI Design</span>
-          </div>
-
-          <div class="work-grid-banner">
-            <img class="w-100" src="assets/images/di-ginie.png" />
-          </div>
-
-          <div class="work-grid-title">
-            <a class="default-link" href="./works/di-ginie.html">
-              DiGinie
-              <img
-                alt="Arrow icon pointing to upper left corner"
-                src="./assets/icons/link-arrow.png"
-              />
-            </a>
-          </div>
-        </div>
-
-        <div class="work-grid">
-          <div class="work-grid-tags">
-            <span class="tag">Social Media</span>
-          </div>
-
-          <div class="work-grid-banner">
+          <div class="work-details-grid">
             <img
-              alt="Banner showing design work done for dental speed"
-              class="w-100"
-              src="assets/images/dental-speed.png"
+              class="work-details-banner"
+              alt="Banner showing DiGinie app design"
+              src="../assets/images/dental-speed-banner.png"
             />
-          </div>
+            <div class="work-details-title">
+              <span class="tag"> Social Media </span>
+              <h1 class="font-w-400">Dental Speed</h1>
+            </div>
+            <div class="work-details-behance">
+              <h3 class="text-primary font-w-400 text-uppercase">
+                Check the hole process
+              </h3>
+              <a
+                class="default-link"
+                href="https://www.behance.net/Gbtonini"
+                target="_blank"
+              >
+                Behance
+                <img
+                  alt="Arrow icon pointing to upper left corner"
+                  src="../assets/icons/link-arrow.png"
+                />
+              </a>
+            </div>
+            <div class="work-details-description font-w-200">
+              <p>
+                Dental Speed Graph began its history in the dental area with
+                printed solutions for relationship marketing and today it is
+                consolidated in the market as the main dental marketing company
+                in Brazil, offering the best tools for patient loyalty to the
+                service.
+              </p>
 
-          <div class="work-grid-title">
-            <a class="default-link" href="./works/dental-speed.html">
-              Dental Speed
-              <img
-                alt="Arrow icon pointing to upper left corner"
-                src="./assets/icons/link-arrow.png"
-              />
-            </a>
-          </div>
-        </div>
-
-        <div class="work-grid">
-          <div class="work-grid-tags">
-            <span class="tag">Logo & Branding</span>
-          </div>
-
-          <div class="work-grid-banner">
-            <img
-              alt="Banner showing design work done for Espaço Jasmin"
-              class="w-100"
-              src="assets/images/espaco-jasmin.png"
-            />
-          </div>
-
-          <div class="work-grid-title">
-            <a class="default-link" href="">
-              Espaço Jasmin
-              <img
-                alt="Arrow icon pointing to upper left corner"
-                src="./assets/icons/link-arrow.png"
-              />
-            </a>
+              <p>
+                This success was achieved through its values, whose main
+                objective is to delight its customers in every detail, from
+                product development, service to delivery.
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -160,7 +130,7 @@
     <h2 class="section-title">
       <img
         alt="Icon of a eight pointed star"
-        src=".//assets/icons/title-icon.svg"
+        src="..//assets/icons/title-icon.svg"
       />
       <span>Contact Me</span>
     </h2>
@@ -192,7 +162,7 @@
                 Behance
                 <img
                   alt="Arrow icon pointing to upper left corner"
-                  src="./assets/icons/link-arrow.png"
+                  src="../assets/icons/link-arrow.png"
                 />
               </a>
             </li>
@@ -205,7 +175,7 @@
                 Instagram
                 <img
                   alt="Arrow icon pointing to upper left corner"
-                  src="./assets/icons/link-arrow.png"
+                  src="../assets/icons/link-arrow.png"
                 />
               </a>
             </li>
@@ -218,7 +188,7 @@
                 LinkedIn
                 <img
                   alt="Arrow icon pointing to upper left corner"
-                  src="./assets/icons/link-arrow.png"
+                  src="../assets/icons/link-arrow.png"
                 />
               </a>
             </li>
