página de detalhes para espaço jasmin

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               alt="Banner showing design work done for Espaço Jasmin"
               src="./assets/images/espaco-jasmin.png"
             />
-            <a class="default-link" href="work.html">
+            <a class="default-link" href="works/espaco-jasmin.html">
               Espaço Jasmin
               <img
                 alt="Arrow icon pointing to upper left corner"
