--- a/works/dental-speed.html
+++ b/works/dental-speed.html
@@ -82,7 +82,7 @@
           <div class="work-details-grid">
             <img
               class="work-details-banner"
-              alt="Banner showing DiGinie app design"
+              alt="Banner showing Dental Speed social media works"
               src="../assets/images/dental-speed-banner.png"
             />
             <div class="work-details-title">
