--- a/works/espaco-jasmin.html
+++ b/works/espaco-jasmin.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
   <title>Gab Tonini | WORK | Espaço Jasmin</title>
   <meta charset="UTF-8" />
